# deep-learning1

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  DISCRETE_MANIFOLD_MASTER_CODEX_PROMPT.md  LICENSE  README.ko.md  README.md  SECURITY.md  opencode.json  routelm_benchmark_run
.betelgeuze/: action_log.md  next-session-goal-2026-06-24.md  state.md  trace.jsonl
.codex/: config.toml
.github/: CODEOWNERS  labels.yml  pull_request_template.md
audits/: v50_public_repo_auditor_correctness.json
baselines/: de_30b70b_real.json  v52_adapter_guard.json  v53u_de_open_weight_evidence_intake_contract.json
benchmarks/: v53_source_bound_freeze.json
ci/: ai_verify_toolchain.lock.json  tracked_results_allowlist.txt
data/: route_hint_oracle_fixture.txt  routing_probe_fixture.txt
docs/: AMR_BETA_HUMAN_INPUT_PACKET.md  ARCHITECTURE_PLAN_A_TO_Z.md  AUDIT_DESIGN_PARTNER_REVIEW.md  AUDIT_MY_REPO_ALPHA.md  CI_LANES.md  DESIGN_V01.md  DESIGN_V02_PRE.md  DE_30B70B_BASELINE_ADMISSION.md  DE_EXECUTION_PACKET.md  DISCRETE_MANIFOLD_ARCHITECTURE_PLAN_A_TO_Z.md  EXPERIMENTS.md  H5_QUALITY_DIAGNOSTICS_PLAN.md  INDEX.md  PIPELINE_MIGRATION.md  POST_V18_RESEARCH_ROADMAP.md  PR2_REWRITE_DRAFT.md  PR2_SPLIT_PLAN.md  READY_SEMANTICS.md  RELEASE_CRITICAL_PATH.md  RETRIEVAL_LEAKAGE_GUARD.md  REVIEW_RETURN_WORKFLOW_CONTRACT.md  ROADMAP.md  STATUS.md  V02B_CHECKLIST.md  V02B_DECISION_BOUNDARY.md  V02B_MULTI_SEED_PROTOCOL.md  V02B_RESULTS.md  V02_BASELINES.md  V03_ROUTE_HINT_ORACLE.md  V03_ROUTING_PROBE.md  V03_STATIC_ROUTING.md  V06_ROUTE_MEMORY.md  V07_GOAL.md  V09_GPU_BACKEND.md  V0_3_ARCHITECTURE_PREVIEW.md  V11_PC_ROUTELM.md  V14B_LITE_PREDICTION_LINEAGE_GOAL.md  V1_0_ARCHITECTURE_CHALLENGE_ROADMAP.md  V50_AUDITOR_CORRECTNESS_CONTRACT.md  V52_ADAPTER_GUARD_CONTRACT.md  (+8 more)
examples/: local_codebase_intelligence_box.sh  v1_0_architecture_challenge_candidate_demo.sh  v1_0_architecture_challenge_demo.sh  v1_0_architecture_challenge_measured_registry_de_demo.sh  v1_0_architecture_challenge_measured_registry_demo.sh  v1_0_architecture_challenge_pm_foundation_demo.sh  v61_ssd_resident_moe_demo.sh
experiments/: run_v01_smoke.sh  run_v02_ablation.sh  run_v02_counter.sh  run_v02_repeating.sh  run_v02b_counter_compare.sh  run_v02b_counter_multiseed_compare.sh  run_v02b_repeating_compare.sh  run_v02b_repeating_multiseed_compare.sh  run_v02b_tuned.sh  run_v03_adaptive_gate_ablation.sh  run_v03_confidence_acceptance_ablation.sh  run_v03_confidence_gate_ablation.sh  run_v03_gap_gate_ablation.sh  run_v03_gate_diagnostics.sh  run_v03_input_byte_jump_compare.sh  run_v03_rejection_diagnostics.sh  run_v03_route_hint_kv_exact.sh  run_v03_route_hint_kv_hash.sh  run_v03_route_hint_kv_hash_joint_code.sh  run_v03_route_hint_kv_hash_route_code.sh  run_v03_route_hint_kv_hash_route_code_adaptive.sh  run_v03_route_hint_kv_hash_route_code_agreement.sh  run_v03_route_hint_kv_hash_route_code_confidence.sh  run_v03_route_hint_kv_hash_route_code_corruption.sh  run_v03_route_hint_kv_hash_route_code_credit_calibration.sh  run_v03_route_hint_kv_hash_route_code_credit_fallback_factorial.sh  run_v03_route_hint_kv_hash_route_code_dynamics.sh  run_v03_route_hint_kv_hash_route_code_fallback_adaptive.sh  run_v03_route_hint_kv_hash_route_code_fallback_channel.sh  run_v03_route_hint_kv_hash_route_code_fallback_channel_adaptive.sh  run_v03_route_hint_kv_hash_route_code_fallback_low_grid.sh  run_v03_route_hint_kv_hash_route_code_fallback_persistence.sh  run_v03_route_hint_kv_hash_route_code_fallback_source.sh  run_v03_route_hint_kv_hash_route_code_fallback_strength.sh  run_v03_route_hint_kv_hash_route_code_gated_agg.sh  run_v03_route_hint_kv_hash_route_code_lowconf_diagnostics.sh  run_v03_route_hint_kv_hash_route_code_lowconf_policy.sh  run_v03_route_hint_kv_hash_route_code_projected_delta.sh  run_v03_route_hint_kv_hash_route_code_route_credit.sh  run_v03_route_hint_kv_hash_route_code_route_credit_ablation.sh  (+1165 more)
leakage/: retrieval_model_visible.json
operations/: review_return_workflow.json
pipelines/: v52.yaml  v53.yaml  v54.yaml  v58.yaml  v61.yaml
pr_slices/: pr2.json
readiness/: typed_ready.json
schemas/: ai_verify_toolchain_lock.schema.json  baseline_admission.schema.json  leakage_contract.schema.json  local_repo_audit_accuracy_rows.schema.json  local_repo_audit_baseline_diff.schema.json  local_repo_audit_benchmark_evaluation.schema.json  local_repo_audit_benchmark_findings.schema.json  local_repo_audit_benchmark_label_citation_expectations.schema.json  local_repo_audit_benchmark_labels.schema.json  local_repo_audit_benchmark_maintainer_feedback.schema.json  local_repo_audit_benchmark_manifest.schema.json  local_repo_audit_benchmark_summary.schema.json  (+34 more)
(+387 files in other folders)
